Fix header section on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -73,6 +73,8 @@ body {
   align-items: center;
   justify-content: center;
   position: absolute;
+  text-align: center;
+  padding: 100px;
 }
 
 #header-content span {
